--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -16,12 +16,25 @@
     margin-top: 10px;
     border: none;
 }
+.microphone-md{
+    position: fixed;
+    right: 0px;
+    top: 46%;
+    width: 40px;
+    height: 40px;
+}
 @media (min-width: 490px) {
     .area{
         width: 50%;
     }   
+    
+   
+    
 }
 
+@media (max-width: 490px) {
+  
+}
 
 
 
